[SLAC22-126] Fix spacing between touts

--- a/web/themes/gesso/source/03-components/text-block/_text-block.scss
+++ b/web/themes/gesso/source/03-components/text-block/_text-block.scss
@@ -3,7 +3,7 @@
 @use '00-config' as *;
 
 .c-text-block {
-  + & {
+  & + & {
     margin-top: gesso-get-map(gutter-width);
   }
 }
